--- a/src/main/resources/templates/modules/purchase/purchase_order.html
+++ b/src/main/resources/templates/modules/purchase/purchase_order.html
@@ -133,7 +133,7 @@
                         <div class="form-group row">
                             <label class="col-sm-1 col-form-label">联系邮箱</label>
                             <div class="col-sm-4">
-                                <input class="form-control" type="text" name="receiveContactMail">
+                                <input class="form-control" type="text" name="receiveContactMail" placeholder="可选">
                             </div>
                         </div>
                         <div class="form-group row">
