--- a/src/main/resources/templates/modules/produce_schedule.html
+++ b/src/main/resources/templates/modules/produce_schedule.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5"
       xmlns:sp="">
 <head th:replace="includes/base :: common_header(~{},~{::link},~{::style})">
     <link rel="stylesheet" th:href="@{/css/tab-common.css}">
@@ -72,7 +73,11 @@
                             <td class="text-center" th:if="${'multiple' eq params['mode']}"><input type="checkbox" th:name="${m[0]}"/></td>
                             <td th:each="v : ${grid.rows[mStat.index]}" th:class="${'text-' + report.reportColumnList.get(vStat.index).align.name().toLowerCase()}" th:if="${!report.reportColumnList.get(vStat.index).hidden}">
                                 <a href="javascript:;" th:name="${report.reportColumnList.get(vStat.index).name}"  th:if="${vStat.index == 4}" th:text="${v}" th:onclick="showDialog('查看', [[${m[0]}]])"></a>
-                                <span th:name="${report.reportColumnList.get(vStat.index).name}" th:if="${vStat.index != 4}" th:text="${report.reportColumnList.get(vStat.index).type.name() eq 'NUMERIC' ? #numbers.formatInteger(v, 0, 'COMMA') : (report.reportColumnList.get(vStat.index).type.name() eq 'DECIMAL' ? #numbers.formatDecimal(v,1,'COMMA',2,'POINT') : v) }"></span>
+
+                                <a href="javascript:;" th:if="${vStat.index == 11 and #strings.startsWith(m[11],'SO') }" sec:authorize="${hasAuthority('produce_order_read')}" th:text="${report.reportColumnList.get(vStat.index).type.name() eq 'NUMERIC' ? #numbers.formatInteger(v, 0, 'COMMA') : (report.reportColumnList.get(vStat.index).type.name() eq 'DECIMAL' ? #numbers.formatDecimal(v,1,'COMMA',2,'POINT') : v) }" th:onclick="openOnNewTab('[(${m[11]})]', '[(${\'/produce_orders/code/\' + m[11]})]', '[(${m[11]})]')"></a>
+                                <span href="javascript:;" th:if="${vStat.index == 11 and #strings.startsWith(m[11],'SO') }" sec:authorize="${!hasAuthority('produce_order_read')}" th:text="${report.reportColumnList.get(vStat.index).type.name() eq 'NUMERIC' ? #numbers.formatInteger(v, 0, 'COMMA') : (report.reportColumnList.get(vStat.index).type.name() eq 'DECIMAL' ? #numbers.formatDecimal(v,1,'COMMA',2,'POINT') : v) }"></span>
+
+                                <span th:name="${report.reportColumnList.get(vStat.index).name}" th:if="${vStat.index != 4 and vStat.index != 11}" th:text="${report.reportColumnList.get(vStat.index).type.name() eq 'NUMERIC' ? #numbers.formatInteger(v, 0, 'COMMA') : (report.reportColumnList.get(vStat.index).type.name() eq 'DECIMAL' ? #numbers.formatDecimal(v,1,'COMMA',2,'POINT') : v) }"></span>
                             </td>
                             <td class="text-center">
                                 <a href="javascript:;" th:onclick="openOnNewTab('[(${m[10]})]', '[(${\'/reports/699659248728047616?plantId=719893335619162112&root_reference_code=\' + m[10]})]', '物料凭证')">领料记录</a>
