--- a/src/main/resources/templates/modules/purchase/purchase_order.html
+++ b/src/main/resources/templates/modules/purchase/purchase_order.html
@@ -299,6 +299,9 @@
                 //     $('#so_tab').hide()
                 // }
             },
+            afterDeleteRow: function () {
+                calcTotalAmount()
+            },
             columnConfigs: [
                 {
                     type: "material",
