--- a/src/main/resources/templates/modules/purchase/purchase_order.html
+++ b/src/main/resources/templates/modules/purchase/purchase_order.html
@@ -242,7 +242,7 @@
     <script th:src="@{/js/editable-table-plus.js}"></script>
 
     <script th:src="@{/js/jquery.dialogInput.js}"></script>
-    <script th:src="@{/js/editable-table-plus-customize_type.js}"></script>
+    <script th:src="@{/js/editable-table-plus-customize_type.js?id=1}"></script>
 
     <script th:src="@{/ajaxfileupload.js}"></script>
     <script th:src="@{/js/upload.js}"></script>
